--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,88 @@
-<div id="head">
-    <div class="stripe_color" style="height: 80px ;width: auto; background-color: #3C57C7;">
-        <img id="site-logo" class="left text-left" src="https://www.utmachala.edu.ec/portalwp/wp-content/uploads/2015/08/LOGOINTRO1.png" alt="UTMACH">
-    </div>
-</div>
-<div id=" body">
-    <div class="container">
-        <div class="header">
-            <h1>Biografía</h1>
+<body>
+    <div class="head">
+        <div class="logo">
+            <a href="#">Poco F5</a>
         </div>
-        <div class="content">
-        <div class="profile">
-        <div class="profile-image">
-          <img src="https://media.discordapp.net/attachments/1064723597538623579/1117554927829524621/319741643_179569514770194_4406184704452436584_n.png?width=669&height=669" alt="Foto de perfil">
-        </div>
-        <h2>
-            Elkin Morocho
-        </h2>
-        <p><strong>Fecha de nacimiento:</strong> 30/10/2003</p>
-        <p><strong>Lugar de nacimiento:</strong> Ecuador, Machala</p>
-        <p><strong>Correo:</strong> elkinalexsito55@gmail.com</p>
-      </div>
-      <div class="biography">
-        
-        <p>Soy un universitario de la carrera de Tecnologías de la Información, voy en quinto semestre
-            y pertenezco a la facultad de Ingeniería Civil de la Universidad Técnica de Machala, tengo 19 años de
-            edad, desde que nací he vivido en la ciudad de Machala, mi educación básica fue en la Universidad
-            Educativa Ciudad de Machala, me gradué en el año 2021 del bachillerato. Parte de lo que me gusta hacer 
-            o mis pasatiempos en si son jugar videojuegos, escuchar música, tener salida con mis amigos en cualquier lugar, etc.
-            Parte de ello me dedico a conocer más sobre el hadware de los dispositivos que mi padre consigue
-            para que yo lo pueda reparar o arreglar y tambien con lo que es un conociemiento básico del hadware.
-        </p>
-      </div>
-    </div>
-</div>
 
-<footer id="logotipos">
-    <a href="https://www.tiktok.com/@elkinmorocho3" target="_blank" class="card-link"><img src="https://cdn-icons-png.flaticon.com/128/3116/3116491.png" style="height: 40px;"></a>
-    <a href="https://www.twitch.tv/elkin1_5" target="_blank" class="card-link"><img src="https://cdn-icons-png.flaticon.com/128/4138/4138153.png"style="height: 40px;"> </a>
-    <a href="https://twitter.com/ElkinMorocho" target="_blank" class="card-link"><img src="https://cdn-icons-png.flaticon.com/128/3670/3670151.png" style="height: 40px;"> </a>
-    <a href="https://github.com/ElkinMorocho" target="_blank" class="card-link"><img src="https://cdn-icons-png.flaticon.com/128/733/733553.png" style="height: 40px;"> </a>
-    <a href="https://www.facebook.com/elkin.morocho" target="_blank" class="card-link"><img src="https://cdn-icons-png.flaticon.com/128/5968/5968764.png" style="height: 40px;"> </a>
-    
+            <nav class="navbar">
+                <a href="#">Incio</a>
+                <a href="#">Caracteristicas</a>
+                <a href="#">Opiniones</a>
+                <a href="#">Comprar</a>
+                <a href="#">Notas</a>
+
+            </nav>
+    </div>
+
+    <header class="content header">
+        <h2 class="title">Inicio</h2>
+        <p>
+            Desde el lanzamiento de la primera generación, un Pocophone F1 que sorprendió a todo el mundo, está claro que el POCO se ha convertido en uno de esos lanzamientos que buena parte de los usuarios esperan cada año.
+        </p>
+
+        <div class="btn-home">
+            <a href="#" class="btn">Saber mas</a>
+            <a href="#" class="btn">Saber mas</a>
+        </div>
+    </header>
+
+    <section class="content sau">
+
+        <h2 class="title">Especificaciones</h2>
+        <p>El Snapdragon® 7+ Gen 2 se fabrica mediante un proceso de 4 nm de TSMC, con la misma estructura de CPU y GPU insignia que Snapdragon® 8+ Gen 1. Combina una gran resistencia con un bajo consumo de energía para lograr un mayor rendimiento con una potencia excepcional.</p>
+        
+        <div class="box-container">
+
+            <div class="box">
+                <i href="#" target="_blank" class="card-link"><img src="https://cdn-icons-png.flaticon.com/128/1086/1086685.png" style="height: 35px;"></i>
+                <h4>Procesador</h4>
+                <p>Plataforma móvil Snapdragon® 7+ Gen 2
+                    CPU: 1 Cortex-X2 de hasta 2,91 GHz, 3 A710 de hasta 2,49 GHz y 4 A510 de hasta 1,8 GHz
+                </p>
+            </div>
+            <div class="box">
+                <i href="#" target="_blank" class="card-link"><img src="https://cdn-icons-png.flaticon.com/128/900/900330.png" style="height: 45px;"></i>
+                <h4>Almacenamiento y RAM</h4>
+                <p>8 GB + 256 GB | 12 GB + 256 GB
+                    LPDDR5 + UFS 3.1
+                </p>
+            </div>
+            <div class="box">
+                <i href="#" target="_blank" class="card-link"><img src="https://cdn-icons-png.flaticon.com/128/7513/7513553.png" style="height: 45px;"></i>
+                <h4>Pantalla</h4>
+                <p>AMOLED DotDisplay Flow FHD+ de 6,67"</p>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="content about">
+
+        <h2 class="title">Comprar Ahora</h2>
+        <p>Puede adquirir este increible producto dentro de nuestros locales oficiales o distribuidoras autorizados a un fabuloso precio que no pdora imaginar.
+        </p>
+
+        <a href="#" class="btn">Saber Precio</a>
+
+    </section>
+
+    <section class="content price">
+
+        <article class="contain">
+            <h2 class="title">Notas</h2>
+            <p>* La apariencia del smartphone que se muestra en la página es solo de referencia. El color y el acabado pueden variar ligeramente en diferentes entornos. Las imágenes son solo de referencia. Las imágenes creativas de las características que aparecen en la página son solo ilustrativas y no representan la estructura real. Las imágenes son solo de referencia.La fuente de datos de la prueba de frecuencia de la CPU es el sitio web oficial de Qualcomm.
+                Es necesario iniciar la ampliación dinámica del almacenamiento en los ajustes y seleccionar el almacenamiento añadido en función de la capacidad libre actual del smartphone; en la versión de 12 GB+256 GB se puede activar la opción de 19 GB.
+                Algunos modos de disparo no son compatibles con OIS+EIS.
+            </p>
+
+        </article>
+
+    </section>
+
+    <section class="content contact">
+        <h2 class="title">Contacto</h2>
+        <p>0962683822</p>
         <p>&copy; 2023 Elkin Alenxander Morocho Belduma. Todos los derechos reservados.</p>
-      </footer>
-</div>
+    </section>
+</body>
